@@ -511,13 +511,15 @@ gearman_return_t gearman_client_job_status(gearman_client_st *client,
 {
   gearman_return_t ret;
 
-  gearman_task_st do_task, *do_task_ptr;
-  do_task_ptr= gearman_client_add_task_status(client, &do_task, client,
-                                              job_handle, &ret);
+  gearman_task_st do_task;
+  gearman_task_st *do_task_ptr= gearman_client_add_task_status(client, &do_task, client,
+                                                               job_handle, &ret);
   if (gearman_failed(ret))
+  {
     return ret;
-
+  }
   assert(do_task_ptr);
+  do_task_ptr->type= GEARMAN_TASK_KIND_DO;
 
   gearman_task_clear_fn(do_task_ptr);
 
@@ -1178,7 +1180,6 @@ static void *_client_do(gearman_client_st *client, gearman_command_t command,
                         const void *workload_str, size_t workload_size,
                         size_t *result_size, gearman_return_t *ret_ptr)
 {
-  gearman_task_st do_task, *do_task_ptr;
   gearman_string_t function= { gearman_string_param_cstr(function_name) };
   gearman_unique_t local_unique= gearman_unique_make(unique, unique ? strlen(unique) : 0);
   gearman_string_t workload= { static_cast<const char*>(workload_str), workload_size };
@@ -1189,22 +1190,30 @@ static void *_client_do(gearman_client_st *client, gearman_command_t command,
 
   if (not client)
   {
-    *ret_ptr= GEARMAN_ERRNO;
+    *ret_ptr= GEARMAN_INVALID_ARGUMENT;
     errno= EINVAL;
     return NULL;
   }
 
-  do_task_ptr= add_task(client, &do_task, NULL, command,
-                        function,
-                        local_unique,
-                        workload,
-                        time_t(0),
-                        gearman_actions_do_default());
+  if (not function_name)
+  {
+    *ret_ptr= GEARMAN_INVALID_ARGUMENT;
+    return NULL;
+  }
+
+  gearman_task_st do_task;
+  gearman_task_st *do_task_ptr= add_task(client, &do_task, NULL, command,
+                                         function,
+                                         local_unique,
+                                         workload,
+                                         time_t(0),
+                                         gearman_actions_do_default());
   if (not do_task_ptr)
   {
     *ret_ptr= gearman_universal_error_code(client->universal);
     return NULL;
   }
+  do_task_ptr->type= GEARMAN_TASK_KIND_DO;
 
   gearman_return_t ret= gearman_client_run_tasks(client);
 
@@ -1220,7 +1229,6 @@ static void *_client_do(gearman_client_st *client, gearman_command_t command,
   else if (gearman_success(ret) and do_task_ptr->result_rc == GEARMAN_SUCCESS)
   {
     *ret_ptr= do_task_ptr->result_rc;
-    assert(do_task_ptr);
     if (do_task_ptr->result_ptr)
     {
       gearman_string_t result= gearman_result_take_string(do_task_ptr->result_ptr);
@@ -1255,6 +1263,17 @@ static gearman_return_t _client_do_background(gearman_client_st *client,
                                               gearman_string_t &workload,
                                               gearman_job_handle_t job_handle)
 {
+  if (not client)
+  {
+    errno= EINVAL;
+    return GEARMAN_INVALID_ARGUMENT;
+  }
+
+  if (gearman_size(function) == 0)
+  {
+    return gearman_error(client->universal, GEARMAN_INVALID_ARGUMENT, "function arguement was empty");
+  }
+
   gearman_task_st do_task, *do_task_ptr;
   do_task_ptr= add_task(client, &do_task, 
                         client, 
@@ -1268,19 +1287,24 @@ static gearman_return_t _client_do_background(gearman_client_st *client,
   {
     return gearman_universal_error_code(client->universal);
   }
+  do_task_ptr->type= GEARMAN_TASK_KIND_DO;
 
-  gearman_task_clear_fn(do_task_ptr);
+  gearman_return_t ret;
+  do {
+    ret= gearman_client_run_tasks(client);
+    
+    // If either of the following is ever true, we will end up in an
+    // infinite loop
+    assert(ret != GEARMAN_IN_PROGRESS and ret != GEARMAN_JOB_EXISTS);
 
-  gearman_return_t ret= gearman_client_run_tasks(client);
-  if (ret != GEARMAN_IO_WAIT)
+  } while (gearman_continue(ret));
+
+  if (job_handle)
   {
-    if (job_handle)
-    {
-      strncpy(job_handle, do_task.job_handle, GEARMAN_JOB_HANDLE_SIZE);
-    }
-    client->new_tasks= 0;
-    client->running_tasks= 0;
+    strncpy(job_handle, do_task.job_handle, GEARMAN_JOB_HANDLE_SIZE);
   }
+  client->new_tasks= 0;
+  client->running_tasks= 0;
   gearman_task_free(&do_task);
 
   return ret;
